# tcutils

./: CMakeLists.txt  README.md
include/: config.h.in
include/tc/: args.h  bool.h  check.h  colours.h  const.h  crc32.h  ctype.h  errno.h  html.h  libgen.h  limits.h  luhn.h  math.h  md2.h  mtrand.h  nanoid.h  re.h  stdint.h  stdio.h  stdlib.h  string.h  sys.h  tar.h  tc.h  version.h.in  wav.h
lib/: args.c  check.c  crc32.c  ctype.c  errno.c  html.c  libgen.c  luhn.c  math.c  md2.c  mtrand.c  nanoid.c  re.c  stdio.c  stdlib.c  string.c  sys.c  wav.c
maint/: mklist.sh
src/: arch.c  basename.c  bfi.c  cat.c  catfacts.c  chef.c  clear.c  cmp.c  coinflip.c  compress.c  copy.c  crc32.c  cw2wav.c  d6.c  date.c  dc.c  dec2hex.c  decompress.c  dirname.c  dogfacts.c  dos2unix.c  du.c  duck.c  echo.c  expand.c  extract.c  factor.c  false.c  fgrep.c  fold.c  forage.c  foreach.c  grep.c  gzinfo.c  head.c  hexdump.c  host.c  hostid.c  hostname.c  hr.c  (+66 more)
test/: ctype.check.c  html.check.c  libgen.check.c  math.check.c  string.check.c
tests/: ctype.check.c  errno.check.c  html.check.c  libgen.check.c  luhn.check.c  math.check.c  md2.check.c  mtrand.check.c  re.check.c  string.check.c
